data/derived/fa15/progs/unify/prog1578.ml.out
Characters 64-70:
  then wwhile (f b')
              ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type ('a -> 'a * bool) * 'a
